# Celadon

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.bundle.conf.json  tauri.conf.json  test_errors.txt  test_errors_final.txt
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  undo.rs
src-tauri/src/api/: article_api.rs  feed_api.rs  folder_api.rs  mod.rs  opml_api.rs  settings_api.rs  superfeed_api.rs  tag_api.rs
src-tauri/src/commands/: article.rs  feed.rs  folder.rs  mod.rs  opml.rs  settings.rs  superfeed.rs  syndication.rs  tag.rs  undo.rs
src-tauri/src/models/: article.rs  create_tables.rs  feed.rs  feed_superfeed.rs  folder.rs  mod.rs  settings.rs  superfeed.rs  tag.rs  tag_article.rs
src-tauri/src/protocols/: proxy.rs
src-tauri/src/protocols/blocklists/: privacy.txt
src-tauri/src/syndication/: mod.rs  syndicator.rs
src-tauri/src/syndicator/: syndicator.rs
src-tauri/src/tests/: api_tests.rs  basic_tests.rs  mod.rs  opml_tests.rs  proxy_tests.rs  query_tests.rs  retention_cap_fts_tests.rs  sql_tests.rs  syndication_tests.rs  undo_tests.rs  utils.rs
src-tauri/src/tests/test_items/: sample_opml.opml
src-tauri/src/tests/test_items/feeds/: 1j1ZadGZQ4cZ1jmoe5GWe4cZ.rss.xml  36qCgd9s.rss  4wH1lxkS.rss  QKjaml2t.rss  feed.json  index.xml  substack_feed.xml  vra_VrUg.rss
src/lib/: api.ts  commandBarCommands.test.ts  commandBarCommands.ts  contentLinks.ts  nav.svelte.ts  nav.ts  sanitizeHtml.ts  theme.svelte.ts  theme.ts
src/lib/components/: AddDialog.svelte  AddFeedToSuperfeedModal.svelte  AddTagToArticleModal.svelte  AppSettingsModal.svelte  ArticleCard.svelte  ArticleViewer.svelte  CommandBar.svelte  ConfirmDeleteModal.svelte  ContextMenu.svelte  FeedCard.svelte  FeedSettingsModal.svelte  HelpPopup.svelte  SuperfeedCard.svelte  SuperfeedSettingsModal.svelte  TagCard.svelte  TagSettingsModal.svelte  ViewHeader.svelte
src/routes/: +layout.svelte  +page.svelte
static/: commands.md
