[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.2" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.39" }
image = { version = "0.25.5" }
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "mock", "tests-cfg"] }
sea-orm-migration = "^0.12.0"
async-trait = { version = "0.1", default-features = false }
async-std = { version = "1", features = ["attributes", "tokio1"] }
rss = "2.0"
reqwest = "0.11.18"
atom_syndication = "0.12.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

