[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["custom-protocol"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.39" }
image = { version = "0.25.5" }
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "mock", "tests-cfg"] }
sea-orm-migration = "^0.12.0"
async-trait = { version = "0.1", default-features = false }
async-std = { version = "1", features = ["attributes", "tokio1"] }
rss = { version = "2.0", features = ["validation"] }
reqwest = { version = "0.11.18", default-features = false, features = ["gzip", "rustls-tls"] }
bytes = "1.0"
atom_syndication = "0.12.7"
opml = "1.1.6"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# default `single-thread` makes Engine !Send/!Sync; disable so it can live in Tauri state and async tasks.
adblock = { version = "0.12.1", default-features = false, features = ["embedded-domain-resolver", "full-regex-handling"] }
lol_html = "2.7.2"
http = "1.4.0"
base64 = "0.22"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[workspace]
members = [
    "."
]
